fix(ci): resolve all CI workflow failures across language bindings
This commit fixes multiple CI failures discovered after the v4.2.0 release:

**Elixir CI (all platforms)**
- Remove unused imports (Native, Helpers, Error) in legacy_api.ex
- Prefix unused parameter with underscore (_opts)
- Fixes warnings-as-errors build failures

**C# CI (compilation errors)**
- Replace invalid 'with' expressions on classes with proper object initialization
- Fix method call: ExtractAsync() → ExtractBytesAsync()
- Resolves 4 compilation errors in DeprecationExamples.cs

**Go CI (Windows DLL not found)**
- Add dest-dir: 'target/release' to ONNX Runtime setup steps
- Fixes STATUS_DLL_NOT_FOUND (0xc0000135) error
- Ensures runtime dependencies are in correct PATH location

**Java CI (Windows JNI build failure)**
- Run Maven from workspace root using -f packages/java/pom.xml
- Fixes library path resolution for FFI dependencies
- Updates build, build:ci, and build:release tasks

**Python CI (e2e dependency resolution)**
- Add e2e/python to uv workspace members
- Configure workspace dependency with tool.uv.sources
- Fixes PyPI dependency resolution for unreleased v4.2.0

**Documentation workflow**
- Add fetch-depth: 0 to checkout action
- Eliminates 20+ git revision date warnings

**TypeScript build warnings**
- Suppress intentional direct-eval warning in tsup.config.ts
- eval() used for CJS/ESM compatibility, not a security issue

**Package lockfiles**
- Regenerate pnpm-lock.yaml to sync with package.json manifests
- Regenerate uv.lock with updated workspace configuration

All language binding tests should now pass on all platforms.

--- a/.task/languages/java.yml
+++ b/.task/languages/java.yml
@@ -29,11 +29,10 @@ tasks:
 
   build:
     desc: Build Java package (depends on Rust FFI)
-    dir: packages/java
     cmds:
-      - cmd: bash -c 'if [ -f ~/.sdkman/bin/sdkman-init.sh ]; then source ~/.sdkman/bin/sdkman-init.sh && sdk use java 25.0.1-tem && sdk use maven 3.9.11; fi && mvn clean package -DskipTests'
+      - cmd: bash -c 'if [ -f ~/.sdkman/bin/sdkman-init.sh ]; then source ~/.sdkman/bin/sdkman-init.sh && sdk use java 25.0.1-tem && sdk use maven 3.9.11; fi && mvn -f packages/java/pom.xml clean package -DskipTests'
         platforms: [linux, darwin]
-      - cmd: mvn clean package -DskipTests
+      - cmd: mvn -f packages/java/pom.xml clean package -DskipTests
         platforms: [windows]
 
   build:dev:
@@ -47,20 +46,18 @@ tasks:
 
   build:release:
     desc: Build Java package in release mode (optimized)
-    dir: packages/java
     cmds:
-      - cmd: bash -c 'if [ -f ~/.sdkman/bin/sdkman-init.sh ]; then source ~/.sdkman/bin/sdkman-init.sh && sdk use java 25.0.1-tem && sdk use maven 3.9.11; fi && mvn clean package -DskipTests -Pproduction'
+      - cmd: bash -c 'if [ -f ~/.sdkman/bin/sdkman-init.sh ]; then source ~/.sdkman/bin/sdkman-init.sh && sdk use java 25.0.1-tem && sdk use maven 3.9.11; fi && mvn -f packages/java/pom.xml clean package -DskipTests -Pproduction'
         platforms: [linux, darwin]
-      - cmd: mvn clean package -DskipTests -Pproduction
+      - cmd: mvn -f packages/java/pom.xml clean package -DskipTests -Pproduction
         platforms: [windows]
 
   build:ci:
     desc: Build Java package in CI mode
-    dir: packages/java
     cmds:
-      - cmd: bash -c 'if [ -f ~/.sdkman/bin/sdkman-init.sh ]; then source ~/.sdkman/bin/sdkman-init.sh && sdk use java 25.0.1-tem && sdk use maven 3.9.11; fi && mvn clean package -DskipTests'
+      - cmd: bash -c 'if [ -f ~/.sdkman/bin/sdkman-init.sh ]; then source ~/.sdkman/bin/sdkman-init.sh && sdk use java 25.0.1-tem && sdk use maven 3.9.11; fi && mvn -f packages/java/pom.xml clean package -DskipTests'
         platforms: [linux, darwin]
-      - cmd: mvn clean package -DskipTests
+      - cmd: mvn -f packages/java/pom.xml clean package -DskipTests
         platforms: [windows]
 
   build:bindings:
